# dual_ur3e

./: BUILD-DOCKER-IMAGE.sh  LICENSE  README.md  RUN-DOCKER.sh
docker/: Dockerfile  docker-compose.yml  launch_docker.sh  launch_intel.sh
ur3e_dual_control/: CMakeLists.txt  package.xml
ur3e_dual_control/config/: ur3e_controllers.yaml
ur3e_dual_control/launch/: ur3e_bringup.launch  ur3e_dual_bringup.launch  ur3e_upload.launch  ur_common.launch  ur_control.launch
ur3e_dual_description/: CMakeLists.txt  package.xml
ur3e_dual_description/config/: dual_ur3e.rviz  joint_limits.yaml
ur3e_dual_description/launch/: display.launch  display_flat.launch  ur3e_dual_upload.launch
ur3e_dual_description/meshes/: simple_tool_support.stl  ur3e_dual_body.stl  ur3e_table.stl
ur3e_dual_description/urdf/: dual_ur3e.urdf.xacro  dual_ur3e_flat.urdf.xacro  kosmek_manual_exchanger.urdf.xacro  robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper_manual_exchanger.urdf.xacro  single_ur3e.urdf.xacro  ur3e_dual_flat_workspace.urdf.xacro  ur3e_dual_workspace.urdf.xacro  ur3e_joint_limited_robot.urdf.xacro
ur3e_dual_gazebo/: CMakeLists.txt  package.xml
ur3e_dual_gazebo/config/: ur3e_controllers.yaml
ur3e_dual_gazebo/launch/: dual_ur3e.launch  dual_ur3e_flat.launch  dual_ur3e_hlab.launch  single_ur3e_hlab.launch  single_ur3e_simple_gripper.launch
ur3e_dual_gazebo/launch/inc/: load_ur_gripper_hande.launch.xml  load_ur_simple_gripper.launch.xml
ur3e_dual_gazebo/urdf/: dual_ur_gripper_hande.xacro  ur_gripper_hande.xacro  ur_macro.xacro  ur_simple_gripper.xacro
ur3e_dual_gazebo/worlds/: dual_ur3e.world
ur3e_dual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3e_dual_moveit_config/config/: dual_ur3e_controllers.yaml  dual_ur3e_hlab.urdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur3e.srdf  ur_robot_gazebo.srdf
ur3e_dual_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real_moveit.rviz  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sim_ur3e_dual_controllers.launch  start_real_dual_ur3e_moveit.launch  start_sim_dual_ur3e_moveit.launch  trajectory_execution.launch.xml  ur3e_moveit_controller_manager.launch.xml  ur_robot_gazebo_moveit_controller_manager.launch.xml  warehouse.launch
(+2 files in other folders)
